fix település kép overflow

--- a/Sablon/oldalak/css/telepules.css
+++ b/Sablon/oldalak/css/telepules.css
@@ -20,10 +20,11 @@
     padding: 10px;
     margin-top: 15px;
     text-align: justify;
+    overflow: hidden;
 }
 
 .city img {
-    width: 200px;
+    max-width: 200px;
 }
 
 .cityImgContainer {
@@ -35,4 +36,16 @@
 .city:nth-child(even) .cityImgContainer {
     float: right;
     padding-left: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+    .cityImgContainer {
+        float: none;
+        padding-right: 0;
+    }
+    
+    .city:nth-child(even) .cityImgContainer {
+        float: none;
+        padding-left: 0;
+    }
 }
